--- a/views/blogs/edit.ejs
+++ b/views/blogs/edit.ejs
@@ -1,9 +1,9 @@
 <%- include ('../partials/header') %> 
 <div class="container my-5">
   <header>
-    <h1>New Blog Post</h1>
+    <h1>Edit: <%= formData.title %></h1>
   </header>
   <hr>
-  <%- include ('./_form') %>
+  <%- include ('./_form', { actionPath: '/blogs/update' }) %>
 </div>
 <%- include('../partials/footer') %>
